[shaoshuai]N/A modify test

--- a/src/test/resources/k8s/based-on-template-with-env-override-by-multiple-dot/mutiple-dot-key-secret.yaml
+++ b/src/test/resources/k8s/based-on-template-with-env-override-by-multiple-dot/mutiple-dot-key-secret.yaml
@@ -3,8 +3,8 @@ kind: Secret
 type: Opaque
 metadata:
   labels:
-    app: ftms-business-platform-coupon
-  name: ftms-business-platform-coupon-secret
+    app: business-service-app
+  name: business-service-app-secret
 stringData:
   spring.datasource.username: username
   spring.datasource.password: password
