--- a/src/test/resources/k8s/based-on-template-with-env-override/mysql-business-svc.yaml
+++ b/src/test/resources/k8s/based-on-template-with-env-override/mysql-business-svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Endpoints
 metadata:
-  name: mysql-coupon-svc
+  name: mysql-business-svc
 subsets:
   - addresses:
       - ip: ${endpoints-mysql-address}
