--- a/src/test/resources/mysql-business-svc-mutiple-k8s-kind.yaml
+++ b/src/test/resources/mysql-business-svc-mutiple-k8s-kind.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Endpoints
 metadata:
-  name: mysql-coupon-svc
+  name: mysql-business-endpoints
 subsets:
   - addresses:
       - ip: 192.168.test.id
@@ -13,7 +13,7 @@ subsets:
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql-coupon-svc
+  name: mysql-business-svc
 spec:
   clusterIP: None
   ports:
